working on chapter03: payments, polls, external systems

--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -301,6 +301,75 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2022}
 }
 
+@misc{BPMN_wiki,
+    author = {Wikipedia},
+    title = {{Business Process Model and Notation}},
+    note = {\url{https://en.wikipedia.org/wiki/Business_Process_Model_and_Notation} [dostęp dnia 24 listopada 2024]},
+    year = {2022}
+}
+
+@misc{BPMN_camunda,
+    author = {Camunda},
+    title = {{What is BPMN? Business Process Model and Notation}},
+    note = {\url{https://camunda.com/bpmn/} [dostęp dnia 24 listopada 2024]},
+    year = {2024}
+}
+
+@misc{BPMN_spec,
+    author = {omg.org},
+    title = {{About the Business Process Model And Notation Specification Version 2.0}},
+    note = {\url{https://www.omg.org/spec/BPMN/2.0/} [dostęp dnia 24 listopada 2024]},
+    year = {2010}
+}
+
+@misc{paypal_api,
+    author = {PayPal Developer},
+    title = {{Get started with PayPal REST APIs}},
+    note = {\url{https://developer.paypal.com/api/rest/} [dostęp dnia 24 listopada 2024]},
+    year = {2023}
+}
+
+@misc{stripe_api,
+    author = {stripe},
+    title = {{Dokumentacja}},
+    note = {\url{https://docs.stripe.com/api} [dostęp dnia 24 listopada 2024]},
+    year = {2024}
+}
+
+@misc{twilio,
+    author = {Twilio},
+    title = {{Deliver at scale with proven APIs for SMS}},
+    note = {\url{https://www.twilio.com/en-us/messaging/channels/sms} [dostęp dnia 24 listopada 2024]},
+    year = {2024}
+}
+
+@misc{clickatell,
+    author = {Clickatell},
+    title = {{Send and receive text messages globally using SMS APIs}},
+    note = {\url{https://www.clickatell.com/products/sms-platform/} [dostęp dnia 24 listopada 2024]},
+    year = {2024}
+}
+
+@misc{gmail_api,
+    author = {Google},
+    title = {{Omówienie interfejsu Gmail API }},
+    note = {\url{https://developers.google.com/gmail/api/guides?hl=pl} [dostęp dnia 24 listopada 2024]},
+    year = {2024}
+}
+
+@misc{hashicorp_vault,
+    author = {HashiCorp},
+    title = {{Secure applications identities and protect sensitive data}},
+    note = {\url{https://www.hashicorp.com/products/vault} [dostęp dnia 24 listopada 2024]},
+    year = {2024}
+}
+
+@misc{aws_secret,
+    author = {Google},
+    title = {{AWS Secrets Manager}},
+    note = {\url{https://aws.amazon.com/secrets-manager/} [dostęp dnia 24 listopada 2024]},
+    year = {2024}
+}
 
 @booklet{Marcin,
 title = {{BPMN Notacja modelowania procesów biznesowych}},
