--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -25,4 +25,5 @@
   \item [MFA] (ang.\ \emph{Multi-Factor Authentication})
   \item [ACL] (ang.\ \emph{Access-Control List})
   \item [DMS] (ang.\ \emph{Document management system})
+  \item [BPMN] (ang.\ \emph{Business Process Model and Notation})
 \end{description}
